--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,12 @@ board = az-delivery-devkit-v4
 framework = arduino
 lib_deps = adafruit/Adafruit NeoPixel@^1.12.0
 monitor_speed = 115200 
+
+[env:m5stamp]
+platform = espressif32
+board = m5stack-stamps3
+framework = arduino
+lib_deps = adafruit/Adafruit NeoPixel@^1.12.0
+monitor_speed = 460800 
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
