--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,9 @@ board = az-delivery-devkit-v4
 framework = arduino
 lib_deps = adafruit/Adafruit NeoPixel@^1.12.0
 monitor_speed = 115200 
+build_flags=
+    -DPIXEL_DATAPIN=12
+    -DPIXEL_NR=12
 
 [env:m5stamp]
 platform = espressif32
@@ -23,3 +26,41 @@ lib_deps = adafruit/Adafruit NeoPixel@^1.12.0
 monitor_speed = 460800 
 build_flags = 
     -DARDUINO_USB_CDC_ON_BOOT=1
+    -DPIXEL_DATAPIN=7
+    -DPIXEL_NR=12
+
+
+[env:lilygo-t-display-s3]
+platform = espressif32
+framework = arduino
+lib_deps = adafruit/Adafruit NeoPixel@^1.12.0
+board = lilygo-t-display-s3
+monitor_speed = 460800 
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DPIXEL_DATAPIN=3
+    -DPIXEL_NR=12
+
+
+[env:m5stamp-prod]
+platform = espressif32
+board = m5stack-stamps3
+framework = arduino
+lib_deps = adafruit/Adafruit NeoPixel@^1.12.0
+monitor_speed = 460800 
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DPIXEL_DATAPIN=7
+    -DPIXEL_NR=5
+
+
+[env:m5stamp-withoutLED]
+platform = espressif32
+board = m5stack-stamps3
+framework = arduino
+lib_deps = adafruit/Adafruit NeoPixel@^1.12.0
+monitor_speed = 460800 
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DPIXEL_DATAPIN=21
+    -DPIXEL_NR=1
